[package]
name = "concert-io"
version = "0.1.1"
edition = "2021"

[dependencies]
# TODO: pin to the "stable" branch before the merge.
gmeta = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.2" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
