[package]
name = "concert-state"
version = "0.1.2"
edition = "2021"

[dependencies]
gstd = { workspace = true, features = ["debug"] }
gmeta = { workspace = true, features = ["codegen"] }
concert-io.workspace = true
gear-lib.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }

[features]
binary-vendor = []
